--- a/project.ipynb
+++ b/project.ipynb
@@ -28,6 +28,8 @@
     "* dataset size\n",
     "* dataset diversity\n",
     "\n",
+    "How to implement triplet loss? Find triplets\n",
+    "\n",
     "### Background\n",
     "Info to include:\n",
     "* Timeseries intro\n",
@@ -43,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "outputs": [],
    "source": [
     "# Imports\n",
@@ -52,7 +54,42 @@
     "import matrixprofile as mp\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
-    "import keras"
+    "import keras\n",
+    "from keras import layers, models\n",
+    "import keras.backend as K\n",
+    "import tensorflow_addons as tfa\n",
+    "import uea_ucr_datasets as archive\n",
+    "import sktime\n",
+    "from functools import partial"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "numpy.ndarray"
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Load data\n",
+    "catalogue = archive.list_datasets()\n",
+    "\n",
+    "def standardize(x):\n",
+    "    for sample in x:\n",
+    "        sample = (sample - np.mean(x)) / np.std(x)\n",
+    "    return x"
    ],
    "metadata": {
     "collapsed": false,
@@ -66,21 +103,55 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "# Load data"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "# CNN Encoder"
+    "# CNN Encoder\n",
+    "class CNNEncoder:\n",
+    "    def __init__(self, n_layers, input_len, output_len):\n",
+    "        if n_layers < 1:\n",
+    "            n_layers = 1\n",
+    "\n",
+    "        input_tensor = layers.Input(shape=(input_len,))\n",
+    "        x = input_tensor\n",
+    "\n",
+    "        dilation = 1\n",
+    "        for i in range(n_layers):\n",
+    "            x = self.causal_conv_block(x, dilation=dilation, filters=40)\n",
+    "            dilation *= 2\n",
+    "        x = self.causal_conv_block(x, dilation=dilation, filters=320)\n",
+    "\n",
+    "        x = layers.pooling.GlobalMaxPooling1D()(x)\n",
+    "\n",
+    "        # Project output of x to output_len\n",
+    "        curr_len = K.int_shape(x)\n",
+    "        assert len(curr_len) == 1\n",
+    "\n",
+    "        stride = int(round(curr_len / output_len))\n",
+    "        if stride > 1:\n",
+    "            x = layers.Conv2D(filters=1,\n",
+    "                          kernel_size=(1, 1),\n",
+    "                          strides=stride,\n",
+    "                          padding='valid')(x)\n",
+    "\n",
+    "        return models.Model(inputs=input_tensor, outputs=x)\n",
+    "\n",
+    "    def causal_conv_block(self, x, dilation, filters):\n",
+    "        shortcut = x\n",
+    "\n",
+    "        causal_conv = lambda layer: layers.LeakyReLU(alpha=0.01)(\n",
+    "            tfa.layers.WeightNormalization(\n",
+    "                layers.Conv1D(filters=filters,\n",
+    "                              kernel_size=3,\n",
+    "                              dilation_rate=2**dilation,\n",
+    "                              padding='causal')\n",
+    "            )(layer)\n",
+    "        )\n",
+    "\n",
+    "        causal_conv = causal_conv(causal_conv(x))\n",
+    "\n",
+    "        return layers.Add([causal_conv, shortcut])\n",
+    "\n",
+    "\n",
+    "    def loss(y_true, y_pred):\n",
+    "        pass"
    ],
    "metadata": {
     "collapsed": false,
